--- a/src/main/resources/com/example/demo1/cliente-view.fxml
+++ b/src/main/resources/com/example/demo1/cliente-view.fxml
@@ -1,43 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.media.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="466.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="com.example.demo1.ClienteController">
+<VBox alignment="CENTER" prefHeight="466.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.ClienteController">
    <children>
       <BorderPane prefHeight="464.0" prefWidth="557.0">
-         <bottom>
-            <SplitPane dividerPositions="0.7" prefHeight="67.0" prefWidth="544.0" BorderPane.alignment="CENTER">
-              <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30.0" prefWidth="415.0">
-                     <children>
-                        <TextField layoutX="8.0" layoutY="17.0" prefHeight="25.0" prefWidth="400.0" />
-                     </children>
-                  </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                     <children>
-                        <Button layoutX="32.0" layoutY="13.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="95.0" text="Enviar" />
-                     </children>
-                  </AnchorPane>
-              </items>
-            </SplitPane>
-         </bottom>
+
+          <top>
+              <MenuBar BorderPane.alignment="CENTER">
+                  <menus>
+                      <Menu mnemonicParsing="false" text="File">
+                          <items>
+                              <MenuItem mnemonicParsing="false" text="Close" />
+                          </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Edit">
+                          <items>
+                              <MenuItem mnemonicParsing="false" text="Delete" />
+                          </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Help">
+                          <items>
+                              <MenuItem mnemonicParsing="false" text="About" />
+                          </items>
+                      </Menu>
+                  </menus>
+              </MenuBar>
+          </top>
+
          <center>
             <SplitPane dividerPositions="0.7" prefHeight="370.0" prefWidth="544.0" BorderPane.alignment="CENTER">
                <items>
-                  <TextArea editable="false" prefHeight="200.0" prefWidth="200.0">
+                  <TextArea fx:id="textArea" editable="false" maxWidth="444.0" prefHeight="200.0" prefWidth="200.0" wrapText="true">
                      <padding>
                         <Insets bottom="5.0" left="5.0" top="5.0" />
                      </padding>
                   </TextArea>
-                  <ListView prefHeight="257.0" prefWidth="126.0">
+                  <ListView fx:id="listaConectados" prefHeight="257.0" prefWidth="126.0">
                      <padding>
                         <Insets bottom="5.0" right="5.0" top="5.0" />
                      </padding>
@@ -45,27 +55,23 @@
                </items>
             </SplitPane>
          </center>
-         <top>
-            <MenuBar BorderPane.alignment="CENTER">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
+
+          <bottom>
+              <SplitPane dividerPositions="0.7" prefHeight="67.0" prefWidth="544.0" BorderPane.alignment="CENTER">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="30.0" prefWidth="415.0">
+                          <children>
+                              <TextField fx:id="textMensaje" layoutX="8.0" layoutY="17.0" onKeyPressed="#handleButtonAction" prefHeight="25.0" prefWidth="400.0" />
+                          </children>
+                      </AnchorPane>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                          <children>
+                              <Button fx:id="buttonEnviar" layoutX="32.0" layoutY="13.0" mnemonicParsing="false" onAction="#onEnviar" prefHeight="39.0" prefWidth="95.0" text="Enviar" />
+                          </children>
+                      </AnchorPane>
                   </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-         </top>
+              </SplitPane>
+          </bottom>
       </BorderPane>
    </children>
 </VBox>
